compiler/tools/fpp-check/test/tlm_channel/format_alias_not_numeric.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/tlm_channel/format_alias_not_numeric.fpp:5.25
  telemetry T: T format "{x}"
                        ^
error: invalid format string: T is not an integer type
